fix alignment of sidebar number label in Hebrew

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -2566,7 +2566,7 @@ a.resourcesLink {
 }
 .hebrew .textRange .numberLabel,
 .bilingual .textRange .numberLabel  {
-  right: -14px;
+  right: -30px;
 }
 .textRange.lowlight .numberLabel {
   color: #999;
